--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ install:
     - ${PYTHON_EXE} -m pip install -r requirements.txt                              # ck kernel itself and some essential components
     - ck pull repo:${THIS_REPO_NAME}                                                # ...also trigger pulling dependent repositories
     - echo "$CK_PLATFORM_NAME" | ck detect platform.os --update_platform_init       # set the platform to generic-linux (1) or generic-macos (2)
+    - ck detect soft:compiler.python --full_path=`which ${PYTHON_EXE}`              # pick the one Travis has set for us in the PATH
     - ck install package --tags=model,image-classification,onnx,resnet,converted    # install an ONNX model by converting a MobileNet model from TF
 
 script:
