--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,7 @@ install:
     - ck pull repo:${THIS_REPO_NAME}                                                # ...also trigger pulling dependent repositories
     - echo "$CK_PLATFORM_NAME" | ck detect platform.os --update_platform_init       # set the platform to generic-linux (1) or generic-macos (2)
     - ck detect soft:compiler.python --full_path=`which ${PYTHON_EXE}`              # pick the one Travis has set for us in the PATH
+    - ck install package --tags=lib,python-package,numpy                            # avoid detection by force-installing the package
     - ck install package --tags=model,image-classification,onnx,resnet,converted    # install an ONNX model by converting a MobileNet model from TF
 
 script:
