--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,8 @@ install:
     - echo "$CK_PLATFORM_NAME" | ck detect platform.os --update_platform_init       # set the platform to generic-linux (1) or generic-macos (2)
     - ck detect soft:compiler.python --full_path=`which ${PYTHON_EXE}`              # pick the one Travis has set for us in the PATH
     - ck install package --tags=lib,python-package,numpy                            # avoid detection by force-installing the package
-    - ck install package:lib-tensorflow-1.13.1-cpu
+    - ck install package:lib-tensorflow-1.13.1-cpu                                  # avoid manual selection
+    - ck install package:imagenet-2012-val-min                                      # avoid manual selection
     - ck install package --tags=model,image-classification,onnx,resnet,converted    # install an ONNX model by converting a MobileNet model from TF
 
 script:
