--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ addons:
         packages:
             - g++-6                                                             # For C++14 we need at least gcc-6
             - python-pip
+            - python3-pybind11
         sources:
             - ubuntu-toolchain-r-test
 
@@ -39,6 +40,7 @@ before_install:
                 brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/f2a764ef944b1080be64bd88dca9a1d80130c558/Formula/python.rb
                 export PATH=/usr/local/opt/python/bin:$PATH
                 export PYTHON_EXE=python3
+                ls -l /usr/local/opt/python/bin
             fi
 
             export CK_PLATFORM_NAME="generic-macos "                            # used later by CK
@@ -53,7 +55,7 @@ install:
     - THIS_REPO_NAME=`basename $CWD`
     - echo "TRAVIS_OS_NAME=${TRAVIS_OS_NAME}, WANTED_PYTHON_VERSION=${WANTED_PYTHON_VERSION}"
     - echo "CWD=${CWD}, THIS_REPO_NAME=${THIS_REPO_NAME}, PATH=${PATH}"
-    - which ${PYTHON_EXE}
+    - which "${PYTHON_EXE}"
     - ${PYTHON_EXE} --version
     - rm -f `which pip`                                                             # the file is removable, but not writeable
     - ${PYTHON_EXE} -m pip install --ignore-installed --verbose pip setuptools      # make sure pip is also up to date no matter what
