test: make and use different data_layouts (NCHW vs NHWC)

--- a/.travis.yml
+++ b/.travis.yml
@@ -67,13 +67,15 @@ install:
     - ck install package --tags=lib,python-package,scipy                            # avoid detection by force-installing the package
     - ck install package:lib-tensorflow-1.13.1-cpu                                  # avoid manual selection
     - ck install package:imagenet-2012-val-min                                      # avoid manual selection
-    - ck install package --tags=model,image-classification,onnx,mobilenet,downloaded    # MobileNet ONNX model, downloaded
-    - ck install package --tags=model,image-classification,onnx,mobilenet,converted     # MobileNet ONNX model, converted from TF
-    - ck install package --tags=model,image-classification,onnx,resnet,converted        # ResNet50 ONNX model, converted from TF
+    - ck install package --tags=model,image-classification,onnx,mobilenet,nchw,downloaded   # MobileNet ONNX model, downloaded
+    - ck install package --tags=model,image-classification,onnx,mobilenet,nhwc,converted    # MobileNet ONNX model, converted from TF, in NHWC
+    - ck install package --tags=model,image-classification,onnx,resnet,nchw,converted       # ResNet50 ONNX model, converted from TF, in NCHW
+    - ck install package --tags=model,image-classification,onnx,resnet,nhwc,converted       # ResNet50 ONNX model, converted from TF, in NHWC
 
 script:
     - ck show env                                                                   # show everything that has been detected or installed
-    - ck run program:image-classification-onnx-py --dep_add_tags.weights=mobilenet,converted --cmd_key=barebones  # external preprocessing
-    - ck run program:image-classification-onnx-py --dep_add_tags.weights=resnet,converted --cmd_key=preprocessed  # internal preprocessing
-    - ck run program:image-classification-onnx-py --dep_add_tags.weights=mobilenet,downloaded --cmd_key=preprocessed
+    - ck run program:image-classification-onnx-py --dep_add_tags.weights=mobilenet,converted --cmd_key=barebones        # internal preprocessing
+    - ck run program:image-classification-onnx-py --dep_add_tags.weights=mobilenet,downloaded --cmd_key=preprocessed    # external preprocessing
+    - ck run program:image-classification-onnx-py --dep_add_tags.weights=resnet,nchw,converted --cmd_key=preprocessed   # channels-first layout
+    - ck run program:image-classification-onnx-py --dep_add_tags.weights=resnet,nhwc,converted --cmd_key=preprocessed   # channels-last layout
 
