--- a/docker/image-classification-tflite-ubuntu-18.04/Dockerfile
+++ b/docker/image-classification-tflite-ubuntu-18.04/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update -y \
  && apt-get install -y \
        sudo git vim \
        python3 python3-pip \
-       wget curl zip libz-dev\
+       wget curl zip libz-dev \
  && apt-get clean
 
 # Create non-root user
@@ -28,9 +28,11 @@ ENV CK_ROOT=/home/dvdt/CK \
     PATH=${CK_ROOT}/bin:/home/dvdt/.local/bin:${PATH} \
     CK_PYTHON=python3 \
     CK_CC=gcc \
+    GIT_USER="dividiti" \
+    GIT_EMAIL="info@dividiti.com" \
     LANG=C.UTF-8
 RUN mkdir -p ${CK_ROOT} ${CK_REPOS} ${CK_TOOLS}
-RUN git config --global user.name "dividiti" && git config --global user.email "info@dividiti.com"
+RUN git config --global user.name ${GIT_USER} && git config --global user.email ${GIT_EMAIL}
 RUN git clone https://github.com/ctuning/ck.git ${CK_ROOT}
 RUN cd ${CK_ROOT} \
  && ${CK_PYTHON} setup.py install --user \
@@ -39,8 +41,8 @@ RUN cd ${CK_ROOT} \
 # Pull CK repositories (including ck-env, ck-autotuning and ck-tensorflow).
 RUN ck pull repo:ck-mlperf
 
-# Use generic Linux settings.
-RUN ck detect platform.os --update_platform_init --platform_init_uoa=generic-linux-dummy
+# Use generic Linux settings with dummy frequency setting scripts.
+RUN ck detect platform.os --platform_init_uoa=generic-linux-dummy
 
 # Install Python dependencies.
 RUN ${CK_PYTHON} -m pip install --ignore-installed pip setuptools --user
@@ -51,7 +53,6 @@ RUN ck install package --tags=lib,python-package,scipy
 RUN ck install package --tags=lib,python-package,pillow
 
 # Install C/C++ dependencies.
-
 RUN ck detect soft:compiler.gcc --full_path=`which ${CK_CC}`
 RUN ck install package --tags=lib,tensorflow-lite,tensorflow-static,v1.13.1
 
@@ -61,7 +62,7 @@ RUN ck install package --tags=dataset,imagenet,val,original,min --no_tags=resize
 RUN ck install package --tags=dataset,imagenet,val,preprocessed
 
 # Download MobileNet TF/TFLite model.
-RUN ck install package --tags=image-classification,model,tf,tflite,mlperf,mobilenet,non-quantized
+RUN ck install package --tags=image-classification,model,tf,tflite,mlperf,mobilenet,non-quantized,from-google
 
 # Compile Image Classification TFLite program.
 RUN ck compile program:image-classification-tflite
