testfix: install own pillow to avoid contamination from tensorflow

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,7 @@ install:
     - ck detect soft:compiler.python --full_path=`which ${PYTHON_EXE}`              # pick the one Travis has set for us in the PATH
     - ck install package --tags=lib,python-package,numpy                            # avoid detection by force-installing the package
     - ck install package --tags=lib,python-package,scipy --force_version=1.2.1      # later versions no longer recognize pillow
+    - ck install package --tags=lib,python-package,pillow                           # avoid detection by force-installing the package
     - ck install package:lib-tensorflow-1.13.1-cpu                                  # avoid manual selection
     - ck install package:imagenet-2012-val-min                                      # avoid manual selection
     - ck install package --tags=dataset,imagenet,preprocessed,first.20              # we only need a short preprocessed subset
