--- a/docker/image-classification-tflite.debian-9.9/Dockerfile
+++ b/docker/image-classification-tflite.debian-9.9/Dockerfile
@@ -1,20 +1,19 @@
-FROM debian:9.9
+FROM debian:9
 
 LABEL maintainer="Anton Lokhmotov <anton@dividiti.com>"
 
 SHELL ["/bin/bash", "-c"]
 
 # Install known system dependencies and immediately clean up to make the image smaller.
-# CK needs: git, zip, wget.
+# CK needs: git, wget, zip.
 # TF needs: curl.
-RUN apt-get update -y \
- && apt-get install -y apt-utils \
+RUN apt update -y \
+ && apt install -y apt-utils \
  && apt upgrade -y \
- && apt-get install -y \
-       sudo git vim \
-       python3 python3-pip \
-       wget curl zip libz-dev \
- && apt-get clean
+ && apt install -y \
+        git wget zip libz-dev curl vim \
+        python3 python3-pip \
+ && apt clean
 
 # Create non-root user.
 RUN useradd --create-home --user-group --shell /bin/bash dvdt
@@ -61,12 +60,18 @@ RUN ck install package --tags=dataset,imagenet,aux
 RUN ck install package --tags=dataset,imagenet,val,original,min --no_tags=resized
 RUN ck install package --tags=dataset,imagenet,val,preprocessed
 
-# Download MobileNet TF/TFLite model.
-RUN ck install package --tags=image-classification,model,tf,tflite,mlperf,mobilenet,non-quantized,from-google
+# Download the MobileNet TF/TFLite models (non-quantized and quantized).
+# https://github.com/mlperf/inference/blob/master/edge/object_classification/mobilenets/tflite/README.md#install-the-mobilenet-models-for-tflite
+RUN ck install package --tags=image-classification,model,tf,tflite,mlperf,mobilenet,non-quantized,from-zenodo
+RUN ck install package --tags=image-classification,model,tf,tflite,mlperf,mobilenet,quantized,from-google
+# Download the ResNet TFLite models (with and without the ArgMax operator).
+# https://github.com/mlperf/inference/blob/master/edge/object_classification/mobilenets/tflite/README.md#install-the-resnet-model
+RUN ck install package --tags=image-classification,model,tflite,mlperf,resnet,downloaded,with-argmax
+RUN ck install package --tags=image-classification,model,tflite,mlperf,resnet,downloaded,no-argmax
 
-# Compile Image Classification TFLite program.
+# Compile the Image Classification TFLite program.
 RUN ck compile program:image-classification-tflite
 
-# Run Image Classification TFLite program once.
+# Run the Image Classification TFLite program once with the non-quantized MobileNet model.
 ENTRYPOINT ["/bin/bash", "-c"]
-CMD ["ck run program:image-classification-tflite"]
+CMD ["ck run program:image-classification-tflite --dep_add_tags.weights=mobilenet,non-quantized"]
