--- a/docker/image-classification-tflite.ubuntu-18.04/Dockerfile.dashboard
+++ b/docker/image-classification-tflite.ubuntu-18.04/Dockerfile.dashboard
@@ -64,10 +64,43 @@ RUN ck install package --tags=dataset,imagenet,val,preprocessed
 # https://github.com/mlperf/inference/blob/master/edge/object_classification/mobilenets/tflite/README.md#install-the-mobilenet-models-for-tflite
 RUN ck install package --tags=image-classification,model,tf,tflite,mlperf,mobilenet,non-quantized,from-zenodo
 RUN ck install package --tags=image-classification,model,tf,tflite,mlperf,mobilenet,quantized,from-google
+
+# Benchmark the performance of the non-quantized MobileNet model.
+RUN ck benchmark program:image-classification-tflite \
+--repetitions=10 --env.CK_BATCH_SIZE=1 --env.CK_BATCH_COUNT=2 \
+--dep_add_tags.weights=mlperf,image-classification,mobilenet,non-quantized,tflite \
+--record --record_repo=local --record_uoa=mlperf-image-classification-mobilenet-non-quantized-tflite-performance \
+--tags=mlperf,image-classification,mobilenet,non-quantized,tflite,performance \
+--skip_print_timers --skip_stat_analysis --process_multi_keys
+# Benchmark the accuracy of the non-quantized MobileNet model.
+RUN ck benchmark program:image-classification-tflite \
+--repetitions=1  --env.CK_BATCH_SIZE=1 --env.CK_BATCH_COUNT=500 \
+--dep_add_tags.weights=mlperf,image-classification,mobilenet,non-quantized,tflite \
+--record --record_repo=local --record_uoa=mlperf-image-classification-mobilenet-non-quantized-tflite-accuracy \
+--tags=mlperf,image-classification,mobilenet,non-quantized,tflite,accuracy \
+--skip_print_timers --skip_stat_analysis --process_multi_keys
+
+# Benchmark the performance of the quantized MobileNet model.
+RUN ck benchmark program:image-classification-tflite \
+--repetitions=10 --env.CK_BATCH_SIZE=1 --env.CK_BATCH_COUNT=2 \
+--dep_add_tags.weights=mlperf,image-classification,mobilenet,quantized,tflite \
+--record --record_repo=local --record_uoa=mlperf-image-classification-mobilenet-quantized-tflite-performance \
+--tags=mlperf,image-classification,mobilenet,quantized,tflite,performance \
+--skip_print_timers --skip_stat_analysis --process_multi_keys
+# Benchmark the accuracy of the quantized MobileNet model.
+RUN ck benchmark program:image-classification-tflite \
+--repetitions=1  --env.CK_BATCH_SIZE=1 --env.CK_BATCH_COUNT=500 \
+--dep_add_tags.weights=mlperf,image-classification,mobilenet,quantized,tflite \
+--record --record_repo=local --record_uoa=mlperf-image-classification-mobilenet-quantized-tflite-accuracy \
+--tags=mlperf,image-classification,mobilenet,quantized,tflite,accuracy \
+--skip_print_timers --skip_stat_analysis --process_multi_keys
+
 # Download the ResNet TFLite models (with and without the ArgMax operator).
 # https://github.com/mlperf/inference/blob/master/edge/object_classification/mobilenets/tflite/README.md#install-the-resnet-model
 RUN ck install package --tags=image-classification,model,tflite,mlperf,resnet,downloaded,with-argmax
 RUN ck install package --tags=image-classification,model,tflite,mlperf,resnet,downloaded,no-argmax
+
+# TODO: benchmark the performance and accuracy of the ResNet TFLite models.
 
 # Compile the Image Classification TFLite program.
 RUN ck compile program:image-classification-tflite
