--- a/docker/image-classification-tflite.ubuntu-18.04/Dockerfile.dashboard
+++ b/docker/image-classification-tflite.ubuntu-18.04/Dockerfile.dashboard
@@ -105,6 +105,9 @@ RUN ck install package --tags=image-classification,model,tflite,mlperf,resnet,do
 # Compile the Image Classification TFLite program.
 RUN ck compile program:image-classification-tflite
 
+# Reduce the image size by removing the TF source.
+RUN rm -rf `ck locate env --tags=lib,tensorflow-lite,tensorflow-static,v1.13.1`/src
+
 # Run the Image Classification TFLite program once with the non-quantized MobileNet model.
 ENTRYPOINT ["/bin/bash", "-c"]
 CMD ["ck run program:image-classification-tflite --dep_add_tags.weights=mobilenet,non-quantized"]
